Fix bug where on mobile cider detail did not scroll to top.

--- a/app/assets/stylesheets/main/07_cider_detail.css
+++ b/app/assets/stylesheets/main/07_cider_detail.css
@@ -86,4 +86,16 @@ img.cider-thumb {
     border-right: 0;
   }
 
+  .cider-detail-ratings {
+    float: none;
+  }
+
+  .cider-detail-abv {
+    float: none;
+    border-right: 0;
+  }
+
+  .cider-detail-organic {
+    float: none;
+  }
 }
